# dq

./: LICENSE  README.md  main.py  mise.toml  pyproject.toml
.github/workflows/: publish.yml  test.yml
dq/: __init__.py  cli.py  display.py  engine.py  repl.py
testdata/: customers.csv  orders.json  sales.csv
